--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,5 +1,14 @@
+@import url("https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:ital,wght@0,200..800;1,200..800&display=swap");
 @import "tailwindcss";
 @import "tw-animate-css";
+
+@theme {
+  --font-plus-jakarta-sans: "Plus Jakarta Sans", sans-serif;
+}
+
+body {
+  @apply font-plus-jakarta-sans;
+}
 
 @custom-variant dark (&:is(.dark *));
 
